# adaptive-autosar

./: .gitignore  CMakeLists.txt
common/: speed_service.hpp
docs/: README.md  environment-setup.md
speed_consumer/: CMakeLists.txt
speed_provider/: CMakeLists.txt
